--- a/app/assets/stylesheets/hera/themes.scss
+++ b/app/assets/stylesheets/hera/themes.scss
@@ -18,8 +18,11 @@
   --border-color-dark: #{$grey-300};
 
   // Buttons
-  --btn-outline-primary-hover-bg:    #{$brand-800};
-  --btn-outline-primary-hover-color: #{$brand-200};
+  --btn-outline-info-color:      #{$green-500};
+  --btn-outline-lavender-color:  #{$lavender-light};
+  --btn-outline-secondary-color: #{$grey-400};
+  --btn-outline-success-color:   #{$green-500};
+  --btn-outline-warning-color:   #{$yellow-500};
 
   // Forms
   --form-select-caret: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23d1d1d1' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
@@ -65,8 +68,11 @@
   --border-color-dark: #{$grey-900};
 
   // Buttons
-  --btn-outline-primary-hover-bg:    #{$brand-200};
-  --btn-outline-primary-hover-color: #{$brand-900};
+  --btn-outline-info-color:      #{darken($green-700, 10%)};
+  --btn-outline-lavender-color:  #{$lavender-dark};
+  --btn-outline-secondary-color: #{$grey-700};
+  --btn-outline-success-color:   #{darken($green-700, 10%)};
+  --btn-outline-warning-color:   #{$yellow-800};
 
   // Forms
   --form-select-caret: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
